--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,10 @@
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     padding: 10px 40px;
+    height: 100px;
+    border-bottom: 1px dashed #37424A;
+    color: #37424A;
+    margin-bottom: 25px;
 }
