--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,7 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans:wght@300;400&family=Yeseva+One&display=swap');
+
+$primary-font: 'Yeseva One', serif;
+$main-font: 'Merriweather Sans', sans-serif;
+$heading-font: 'Merriweather', serif;
+
 form {
-    border: 1px solid #545454;
+    border: 4px solid #37424A;
     border-radius: 3px;
     padding: 40px;
+    background-color: #F2D653;
+}
+
+#form {
+    height: 363px;
+    transition: height 100ms linear;
 }
 
 input {
@@ -9,4 +21,31 @@ input {
     width: 100%;
     line-height: 16px;
     margin: 10px 0;
+    background-color: #F2D653;
+    color: #37424A;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 14px;    
+    border: 2px solid #37424A;
+    transition: background-color 150ms ease-in;
+
+    &:hover {
+        background-color: #f1e091;
+    }
+}
+
+textarea {
+    padding: 15px 15px;
+    width: 100%;
+    height: 200px;
+    line-height: 16px;
+    margin: 10px 0;
+    font-family: $main-font;
+    background-color: #37424A;
+    color: white;
+
+    
+}
+
+::placeholder {
+    color: #d3d3d3;
 }
