--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Test</title>
-        <!-- <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css"> -->
-    </head>
 
-    <body>
+<head>
+    <meta charset="utf-8">
+    <title>Text Sentiment Evaluator</title>
+</head>
 
-        <header>
-            <div class="">
-                Logo
+<body>
+
+    <header>
+        <div class="title">
+            <h1>text sentiment evaluator</h1>
+        </div>
+    </header>
+
+    <main>
+        <section id="submitForm">
+            <form id="form" onsubmit="return Client.handleSubmit(event)">
+                <textarea id="submission" type="text" name="input" value="" placeholder="Insert text here."></textarea>
+                <input id="button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
+                    onsubmit="return Client.handleSubmit(event)">
+            </form>
+        </section>
+
+        <section id="results">
+            <p id="results-heading">results</p>
+            <div id="categories">
+                <div>
+                    <h2>Subjectivity</h2>
+                    <p class="category" id="subjectivity"></p>
+                </div>
+
+                <div>
+                    <h2>Agreement</h2>
+                    <p class="category" id="agreement"></p>
+                </div>
             </div>
-            <div class="">
-                navigation
+            <div>
+                <h2 id="polarity-heading">Polarity Analysis</h2>
+                <div class="legend">
+                    <div class="item">
+                        <div class="color strongPos"></div>
+                        <div class="name">Strong Positive</div>
+                    </div>
+                    <div class="item">
+                        <div class="color pos"></div>
+                        <div class="name">Positive</div>
+                    </div>
+                    <div class="item">
+                        <div class="color neu"></div>
+                        <div class="name">Neutral</div>
+                    </div>
+                    <div class="item">
+                        <div class="color neg"></div>
+                        <div class="name">Negative</div>
+                    </div>
+                    <div class="item">
+                        <div class="color strongNeg"></div>
+                        <div class="name">Strong Negative</div>
+                    </div>
+                </div>
+                <p id="submittedText"></p>
             </div>
-        </header>
+        </section>
+    </main>
 
-        <main>
-            <section>
-                <form class="" onsubmit="return handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return handleSubmit(event)" onsubmit="return handleSubmit(event)">
-                </form>
-            </section>
+    <footer>
+        <p>This is a footer</p>
+    </footer>
 
-            <section>
-                <strong>Form Results:</strong>
-                <div id="results"></div>
-            </section>
-        </main>
+</body>
 
-        <footer>
-            <p>This is a footer</p>
-        </footer>
-
-    </body>
 </html>
