--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,9 +19,9 @@
             <form id="form" >
                 <textarea id="submission" type="text" name="input" value="" placeholder="Insert text here."></textarea>
                 <input id="button" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
-                    onsubmit="return Client.handleSubmit(event)">
-                <button id="return" onclick="return Client.updateLayout()">return</button>
+                    onsubmit="return Client.handleSubmit(event)">                
             </form>
+            <button id="return" onclick="return Client.updateLayout()">return</button>
         </section>
 
         <section id="results">
@@ -65,6 +65,16 @@
             </div>
         </section>
     </main>
+
+    <script>
+        // Check that service workers are supported
+        if ('serviceWorker' in navigator) {
+            // Use the window load event to keep the page load performant
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js');
+            });
+        }
+    </script>
 
 </body>
 
